feat: add 1 to 5

--- a/practica2.ipynb
+++ b/practica2.ipynb
@@ -2,6 +2,268 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "3fb4163e",
+   "metadata": {},
+   "source": [
+    "## **Task  1 - Práctica**\n",
+    "Para esta parte estarán resolviendo el problema de CartPole con Deep Q-Learning y una red de destino. Para esto, el \n",
+    "objetivo de este ejercicio es entrenar a un agente para que equilibre un poste en un carro (cartpole) en movimiento \n",
+    "durante el mayor tiempo posible. Se deberá usar Deep Q-Learning (DQL) con una red objetivo para lograr esto.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7d823d23",
+   "metadata": {},
+   "source": [
+    "#### 1. librerias"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "eda8e1e4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import gymnasium as gym\n",
+    "import numpy as np\n",
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "import torch.optim as optim\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "17c4f055",
+   "metadata": {},
+   "source": [
+    "#### 2. Entorno en Cartpole"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8e0f0d83",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<TimeLimit<OrderEnforcing<PassiveEnvChecker<CartPoleEnv<CartPole-v1>>>>>"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.random.seed(123)\n",
+    "torch.manual_seed(123)\n",
+    "\n",
+    "env = gym.make(\"CartPole-v1\", render_mode=\"rgb_array\")\n",
+    "env\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "593aae52",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "obs, info = env.reset(seed=123)\n",
+    "obs_dim   = env.observation_space.shape[0]\n",
+    "action_dim= env.action_space.n\n",
+    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1181d123",
+   "metadata": {},
+   "source": [
+    "### 3. Definan las redes en línea y de destino:\n",
+    "\n",
+    "Cree dos redes neuronales, la red en línea y la red de destino. La red \n",
+    "en línea se utiliza para la selección de acciones y se actualiza con más frecuencia, mientras que la red de \n",
+    "destino se utiliza para estimar los valores Q y se actualiza periódicamente. Ambas redes deberían tener una \n",
+    "arquitectura similar con capas de entrada y salida. Inicialmente, la red de destino debería tener los mismos \n",
+    "pesos que la red en línea.  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "a15926c4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class QNetwork(nn.Module):\n",
+    "    def __init__(self, obs_dim, action_dim, hidden=(128, 128)):\n",
+    "        super().__init__()\n",
+    "        self.net = nn.Sequential(\n",
+    "            nn.Linear(obs_dim, hidden[0]),\n",
+    "            nn.ReLU(),\n",
+    "            nn.Linear(hidden[0], hidden[1]),\n",
+    "            nn.ReLU(),\n",
+    "            nn.Linear(hidden[1], action_dim)\n",
+    "        )\n",
+    "        self._init_weights()\n",
+    "\n",
+    "    def _init_weights(self):\n",
+    "        for m in self.modules():\n",
+    "            if isinstance(m, nn.Linear):\n",
+    "                nn.init.xavier_uniform_(m.weight)\n",
+    "                nn.init.zeros_(m.bias)\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        return self.net(x)\n",
+    "\n",
+    "online_q = QNetwork(obs_dim, action_dim).to(device)\n",
+    "target_q = QNetwork(obs_dim, action_dim).to(device)\n",
+    "\n",
+    "# target inicial \n",
+    "target_q.load_state_dict(online_q.state_dict())\n",
+    "for p in target_q.parameters():\n",
+    "    p.requires_grad = False\n",
+    "target_q.eval()\n",
+    "\n",
+    "# Optimizador y loss\n",
+    "optimizer = optim.Adam(online_q.parameters(), lr=1e-3)\n",
+    "loss_fn   = nn.SmoothL1Loss()\n",
+    "\n",
+    "# Sincronizacion de redes\n",
+    "def hard_update(target: nn.Module, source: nn.Module):\n",
+    "    target.load_state_dict(source.state_dict())\n",
+    "\n",
+    "@torch.no_grad()\n",
+    "def soft_update(target: nn.Module, source: nn.Module, tau: float = 0.005):\n",
+    "    for tp, sp in zip(target.parameters(), source.parameters()):\n",
+    "        tp.data.mul_(1.0 - tau).add_(sp.data, alpha=tau)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "676b7fa4",
+   "metadata": {},
+   "source": [
+    "#### 4. Establecer hiperparámetros\n",
+    "Defina hiperparámetros como el número de episodios, el tamaño de los \n",
+    "batches, el factor de descuento (gamma) y los parámetros de exploración (epsilon, epsilon decay, epsilon \n",
+    "mínimo). Ajuste estos hiperparámetros según sea necesario para optimizar el entrenamiento. \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "96aae237",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from dataclasses import dataclass\n",
+    "import torch\n",
+    "\n",
+    "@dataclass\n",
+    "class DQNConfig:\n",
+    "    episodes: int = 500\n",
+    "    buffer_capacity: int = 50_000\n",
+    "    warmup_steps: int = 5_000\n",
+    "    batch_size: int = 64\n",
+    "    gamma: float = 0.99\n",
+    "    lr: float = 1e-3\n",
+    "\n",
+    "    # Exploracion\n",
+    "    epsilon_start: float = 1.0\n",
+    "    epsilon_end: float = 0.03\n",
+    "    epsilon_decay_steps: int = 15_000\n",
+    "    use_exponential_eps: bool = False\n",
+    "\n",
+    "    # Target network\n",
+    "    target_update_every: int = 1_000\n",
+    "    use_soft_update: bool = False\n",
+    "    tau: float = 0.005\n",
+    "\n",
+    "    grad_clip: float = 10.0\n",
+    "    seed: int = 123\n",
+    "\n",
+    "cfg = DQNConfig()\n",
+    "\n",
+    "def epsilon_linear(step: int, cfg: DQNConfig):\n",
+    "    frac = min(1.0, step / cfg.epsilon_decay_steps)\n",
+    "    return cfg.epsilon_start + (cfg.epsilon_end - cfg.epsilon_start) * frac\n",
+    "\n",
+    "def epsilon_exponential(step: int, cfg: DQNConfig):\n",
+    "    decay = (cfg.epsilon_end / cfg.epsilon_start) ** (1.0 / cfg.epsilon_decay_steps)\n",
+    "    return max(cfg.epsilon_end, cfg.epsilon_start * (decay ** step))\n",
+    "\n",
+    "def get_epsilon(global_step: int, cfg: DQNConfig):\n",
+    "    if cfg.use_exponential_eps:\n",
+    "        return epsilon_exponential(global_step, cfg)\n",
+    "    return epsilon_linear(global_step, cfg)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e53de351",
+   "metadata": {},
+   "source": [
+    "#### 5. selección de acciones épsilon-greedy\n",
+    "Cree una función para la selección de acciones épsilon greedy. Esta función ayuda al agente a elegir acciones basadas en la política épsilon-greedy. \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "39b3af25",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "@torch.no_grad()\n",
+    "def select_action(state_np: np.ndarray, online_q: nn.Module, action_dim: int, device: torch.device, epsilon: float):\n",
+    "    if np.random.rand() < epsilon:\n",
+    "        return np.random.randint(action_dim)\n",
+    "    s = torch.tensor(state_np, dtype=torch.float32, device=device).unsqueeze(0)\n",
+    "    q = online_q(s)\n",
+    "    return int(q.argmax(dim=1).item())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "2b8df70a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Acciones (a, eps) en 10 pasos de prueba: [(0, 1.0), (1, 1.0), (0, 1.0), (1, 1.0), (1, 1.0), (0, 1.0), (0, 1.0), (1, 1.0), (1, 0.999), (0, 0.999)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# prueba para verrificar que funcione, no hace entrenamiento\n",
+    "global_step = 0\n",
+    "state, _ = env.reset(seed=cfg.seed)\n",
+    "done = False\n",
+    "taken = []\n",
+    "for _ in range(10): \n",
+    "    eps = get_epsilon(global_step, cfg)\n",
+    "    a = select_action(state, online_q, action_dim, device, eps)\n",
+    "    taken.append((a, round(eps, 3)))\n",
+    "    state, reward, terminated, truncated, _ = env.step(a)\n",
+    "    done = terminated or truncated\n",
+    "    global_step += 1\n",
+    "    if done:\n",
+    "        state, _ = env.reset(seed=cfg.seed)\n",
+    "\n",
+    "print(\"Acciones (a, eps) en 10 pasos de prueba:\", taken)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "b2848d48",
    "metadata": {},
    "source": [
@@ -179,8 +441,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.8"
   }
  },
  "nbformat": 4,
