--- a/main.ipynb
+++ b/main.ipynb
@@ -15,6 +15,22 @@
     },
     {
       "cell_type": "markdown",
+      "id": "6d2bbff2",
+      "metadata": {},
+      "source": [
+        "**Repositorio:** https://github.com/FabianKel/DL-LAB7"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "055d4cf8",
+      "metadata": {},
+      "source": [
+        "---"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "id": "3fb4163e",
       "metadata": {
         "id": "3fb4163e"
@@ -1577,25 +1593,23 @@
     },
     {
       "cell_type": "markdown",
+      "id": "07cfbfd4",
+      "metadata": {},
+      "source": [
+        "---"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "id": "b2848d48",
       "metadata": {
         "id": "b2848d48"
       },
       "source": [
-        "## **Práctica 2 - Teoría**\n",
+        "## **Task 2 - Teoría**\n",
         "\n",
         "Defina en qué consiste y en qué clase de problemas se pueden usar cada uno de los siguientes acercamientos en\n",
         "Deep Reinforcement Learning."
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "id": "4dcc451e",
-      "metadata": {
-        "id": "4dcc451e"
-      },
-      "source": [
-        "---"
       ]
     },
     {
